<resources>
    <string name="app_name">Домашнее задание</string>
    <string name="edit_label">Редактировать</string>
    <string name="app_exit_label">Выход</string>
    <string name="increase_label">+</string>
    <string name="decrease_label">—</string>
    <string name="cancel_label">Отмена</string>
    <string name="save_label">Сохранить</string>
    <string name="reset_label">Сбросить</string>
    <string name="description_image_ship">Изображение судна</string>
    <string name="app_add_label">Добавить</string>
    <string name="image_default_description">Изображение</string>
    <string name="label_television_diagonal">Диагональ:</string>
    <string name="default_value">——</string>
    <string name="label_television_resolution">Разрешение:</string>
    <string name="label_television_price">Цена:</string>
    <string name="televisions_list_title">Телевизоры</string>
    <string name="televisions_order_by_price_descending_title">Сортировка по убыванию цены</string>
    <string name="televisions_order_by_diagonal_ascending_title">Сортировка по возрастанию диагонали</string>
    <string name="label_id">id:</string>
    <string name="label_author_name">Автор:</string>
    <string name="authors_list_title">Авторы</string>
    <string name="categories_list_title">Категории</string>
    <string name="authors_statistic_list_title">Статистика по авторам</string>
    <string name="info_title">О приложении</string>
    <string name="label_category_name">Категория:</string>
    <string name="label_count_books">Количество книг:</string>
    <string name="label_developer_name">Разработчик:</string>
    <string name="developer_name">Горячев Михаил</string>
    <string name="label_developer_group">Группа:</string>
    <string name="developer_group">ПД011</string>
    <string name="label_development_year">Год разработки:</string>
    <string name="development_year">2023</string>
    <string name="appointment_list_title">Приёмы</string>
    <string name="doctor_list_title">Доктора</string>
    <string name="patient_list_title">Пациенты</string>
    <string name="person_list_title">Персоны</string>
    <string name="speciality_list_title">Специальности</string>
    <string name="label_appointment_date">Дата приёма:</string>
    <string name="label_patient_name">Пациент:</string>
    <string name="label_patient_born_date">Дата рождения:</string>
    <string name="label_patient_passport">Паспорт:</string>
    <string name="label_doctor_name">Доктор:</string>
    <string name="label_doctor_percent">Процент отчислений:</string>
    <string name="label_speciality_name">Специальность:</string>
    <string name="label_doctor_price">Цена приёма:</string>
    <string name="label_surname">Фамилия:</string>
    <string name="label_name">Имя:</string>
    <string name="label_patronymic">Отчество:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_price_min">Мин. цена приёма:</string>
    <string name="label_price_avg">Сред. цена приёма:</string>
    <string name="label_price_max">Макс. цена приёма:</string>
    <string name="label_count">Количество:</string>
    <string name="label_percent_min">Мин. процент:</string>
    <string name="label_percent_avg">Сред. процент:</string>
    <string name="label_percent_max">Макс. процент:</string>
    <string name="query01_title">Запрос 1</string>
    <string name="query02_title">Запрос 2</string>
    <string name="query03_title">Запрос 3</string>
    <string name="query04_title">Запрос 4</string>
    <string name="query05_title">Запрос 5</string>
    <string name="query06_title">Запрос 6</string>
    <string name="query07_title">Запрос 7</string>
    <string name="label_doctor_salary">Зарплата:</string>
</resources>